fixed overflow

--- a/proof-of-concept/style.css
+++ b/proof-of-concept/style.css
@@ -278,7 +278,7 @@ body {
   margin: 0 auto;
   top:0;
   left: 0;
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color: #fff;
 }
 
@@ -554,19 +554,20 @@ body {
 
 /*  Navigation bar */
 .screen .content .navigation-bar {
-  top: 0px;
+  top: 0;
   height: 10vh;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.05);
   width: 100vw;
-  align-items: center;
+  /* align-items: center; */
   padding-right: 16px;
   padding-left: 16px;
   -moz-border-radius: 0 4px 4px 0;
   -webkit-border-radius: 0 4px 4px 0;
   border-radius: 0 4px 4px 0;
   position: relative;
-  /* z-index: 0; */
-  /* position: relative; */
+  /* z-index: 1; */
+  /* position: fixed; */
+  /* background-color: white; */
   /*   border-bottom: 1px solid #333; */
 }
 
@@ -608,12 +609,12 @@ body {
 .screen .content .navigation-bar .filter-area {
   position: absolute;
   top: 20px;
-  width: 100vw;
+  width: 90vw;
   height: 5vh;
   flex-shrink: 0;
   display: flex;
   align-items: center;
-
+  overflow-x: hidden;
 }
 
 .screen .content .navigation-bar .filter-area .filter-icon {
